--- a/style.css
+++ b/style.css
@@ -202,19 +202,19 @@ section.first>div :nth-child(2) {
         width: 305px;
     }
 
-    .hero> :nth-child(1) {
+    .line> :nth-child(1) {
         font-size: 32px;
     }
 
-    .hero> :nth-child(2) {
+    .line> :nth-child(2) {
         font-size: 18px;
     }
 
-    .hero> :nth-child(3) {
+    .line> :nth-child(3) {
         font-size: 18px;
     }
 
-    .hero-buttons {
+    .line-btns {
         display: flex;
         flex-direction: column;
         align-items: center;
