--- a/style.css
+++ b/style.css
@@ -236,3 +236,9 @@ section.first>div :nth-child(2) {
         font-size: 32px;
     }
 }
+     .faqbox {
+        font-size: 15px;
+        padding: 19px;
+        max-width: 45vw;
+
+     }
