--- a/style.css
+++ b/style.css
@@ -249,8 +249,8 @@ section.first>div :nth-child(2) {
 
      }
      #naruto1 {
-        height: 200px;
-        width: 350pxpx;
+        height: 100px;
+        width: 300pxpxpx;
      }
 
 
